// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array 1`] = `
Array [
  Object {
    "locale": "",
    "resource": Object {
      "en": Object {
        "foo": Array [
          Array [
            [Function],
          ],
          [Function],
        ],
      },
    },
  },
]
`;

exports[`basic 1`] = `
Array [
  Object {
    "locale": "",
    "resource": Object {
      "en": Object {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`bridge 1`] = `
Array [
  Object {
    "locale": "",
    "resource": Object {
      "en": Object {
        "backslash-backslash": [Function],
        "backslash-single-quote": [Function],
        "emoji": [Function],
        "hello": [Function],
        "hi, {name} !": [Function],
        "linked": [Function],
        "list": [Function],
        "literal": [Function],
        "named": [Function],
        "nest": Object {
          "lieteral": [Function],
        },
        "plural": [Function],
        "single-quote": [Function],
        "unicode": [Function],
        "unicode-escape": [Function],
        "こんにちは": [Function],
      },
      "ja": Object {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`bridge 2`] = `
Array [
  "{\\"en\\":{\\"hello\\":\\"hello world!\\",\\"named\\":\\"hi, {name} !\\",\\"list\\":\\"hi, {0} !\\",\\"literal\\":\\"hi, {  'kazupon'  } !\\",\\"linked\\":\\"hi, @:name !\\",\\"plural\\":\\"@.caml:{'no apples'} | {0} apple | {n} apples\\",\\"nest\\":{\\"lieteral\\":\\"hi, kazupon !\\"},\\"hi, {name} !\\":\\"hi hi!\\",\\"こんにちは\\":\\"こんにちは！\\",\\"single-quote\\":\\"I don't know!\\",\\"emoji\\":\\"😺\\",\\"unicode\\":\\"A\\",\\"unicode-escape\\":\\"\\\\\\\\u0041\\",\\"backslash-single-quote\\":\\"\\\\\\\\'\\",\\"backslash-backslash\\":\\"\\\\\\\\\\\\\\\\\\"},\\"ja\\":{\\"hello\\":\\"こんにちは！\\"}}",
]
`;

exports[`global 1`] = `
Array [
  Object {
    "locale": "",
    "resource": Object {
      "en": Object {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`global and local 1`] = `
Array [
  Object {
    "locale": "ja",
    "resource": Object {
      "hello": [Function],
    },
  },
]
`;

exports[`global and local 2`] = `
Array [
  Object {
    "locale": "",
    "resource": Object {
      "en": Object {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`import 1`] = `
Array [
  Object {
    "locale": "",
    "resource": Object {
      "en": Object {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`json5 1`] = `
Array [
  Object {
    "locale": "",
    "resource": Object {
      "en": Object {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`locale attr 1`] = `
Array [
  Object {
    "locale": "ja",
    "resource": Object {
      "hello": [Function],
    },
  },
]
`;

exports[`locale attr and basic 1`] = `
Array [
  Object {
    "locale": "",
    "resource": Object {
      "en": Object {
        "hello": [Function],
      },
    },
  },
  Object {
    "locale": "ja",
    "resource": Object {
      "hello": [Function],
    },
  },
]
`;

exports[`locale attr and import 1`] = `
Array [
  Object {
    "locale": "en",
    "resource": Object {
      "hello": [Function],
    },
  },
]
`;

exports[`multiple 1`] = `
Array [
  Object {
    "locale": "",
    "resource": Object {
      "en": Object {
        "hello": [Function],
      },
    },
  },
  Object {
    "locale": "",
    "resource": Object {
      "ja": Object {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`special characters 1`] = `
Array [
  Object {
    "locale": "",
    "resource": Object {
      "en": Object {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`yaml 1`] = `
Array [
  Object {
    "locale": "en",
    "resource": Object {
      "hello": [Function],
    },
  },
  Object {
    "locale": "ja",
    "resource": Object {
      "hello": [Function],
    },
  },
]
`;
